# legisearch

./: .gitignore  README.md  councildoc.html.template  dump.sh  dump.sql  extract_links.py  extract_text.py  fetch.sh  fetch_events.py  fetch_mintues.sh  legisearch  legistar.md  minutes.html.template  my_comments.txt  parser.py  setup.cfg
cal/: cal.py
documentation/: legistar  legistar.md  sanjose.json  website.md
legiscal/: __main__.py  app.py  cal.py
legiscal/static/: app.js
legiscal/templates/: bodies.html  index.html
legisearch/: build.py  cli.py  db.py  fetch.py  legistar.py  query.py  search.py
static_web/: legisearch.css  legisearch.html  legisearch.js
