[metadata]
name = legistool
version = attr: cal.__main__.__version__
description = Legistar Utils
long_description: file: README.md
home-page = https://github.com/jisaacstone/mv-meeting-minutes

[options]
python_requires = >= 3.9
packages =
  cal
install_requires =
  icalendar
  python-dateutil

[options.extras_require]
test =
  types-python-dateutil
  pytest
  flake8
build =
  build
  wheel

[options.entry_points]
console_scripts =
  legiparse = cal.__main__:main

[mypy]
check_untyped_defs = true
