[metadata]
name = legistool
version = attr: legiscal.__main__.__version__
description = Legistar Utils
long_description: file: README.md
home-page = https://github.com/jisaacstone/mv-meeting-minutes

[options]
python_requires = >= 3.9
packages =
  legiscal
  legisearch
install_requires =
  icalendar
  python-dateutil
  flask[async]
  httpx

[options.extras_require]
test =
  types-python-dateutil
  pytest
  flake8
build =
  build
  wheel

[options.entry_points]
console_scripts =
  legisearch = legisearch.search:parse_and_run

[mypy]
check_untyped_defs = true
